--- a/EduPortal/EduPortal.csproj
+++ b/EduPortal/EduPortal.csproj
@@ -322,6 +322,10 @@
     <Content Include="Views\Lecture\Details.cshtml" />
     <Content Include="Views\Lecture\Create.cshtml" />
     <Content Include="Views\Lecture\Edit.cshtml" />
+    <Content Include="Views\Student\Index.cshtml" />
+    <Content Include="Views\Student\Details.cshtml" />
+    <Content Include="Views\Student\Create.cshtml" />
+    <Content Include="Views\Student\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
