--- a/EduPortal/Web.config
+++ b/EduPortal/Web.config
@@ -74,10 +74,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
+  <entityFramework> 
+  <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"> 
+    <parameters> 
+      <parameter value="Data Source=.\SQL2012; Integrated Security=True; MultipleActiveResultSets=True" /> 
+    </parameters> 
+  </defaultConnectionFactory> 
+</entityFramework>
 </configuration>
